--- a/layouts/partials/comments.html
+++ b/layouts/partials/comments.html
@@ -3,7 +3,7 @@
   rel="stylesheet"
   href="https://cdn.jsdelivr.net/npm/@waline/client@v3/dist/waline.css"
 />
-<div id="waline">33333</div>
+<div id="waline"></div>
 <!-- <script src="https://cdn.jsdelivr.net/npm/@waline/client/dist/waline.js"></script> -->
 <script type="module">
   import { init } from "https://cdn.jsdelivr.net/npm/@waline/client/dist/waline.js";
